continue-on-error: true

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -86,6 +86,7 @@ jobs:
         env:
           PERL_VERSION: ${{ matrix.perl }}
         working-directory: ./scripts
+        continue-on-error: true
 
       - uses: actions/upload-artifact@v1
         with:
