Revert "install Carton"
This reverts commit e2dc194c308eb80390ebeb7427a59453eca9f517.

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -75,14 +75,14 @@ jobs:
       - name: gcc --version
         run: gcc --version
 
-      - name: install dependencies
+      - name: cpanm --installdeps .
         shell: cmd
-        run: cpanm Carton && carton install --deployment
+        run: cpanm --installdeps .
         working-directory: ./scripts
 
       - name: build
         shell: cmd
-        run: carton exec perl build-perl-win.pl
+        run: perl build-perl-win.pl
         env:
           PERL_VERSION: ${{ matrix.perl }}
         working-directory: ./scripts
