--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,6 +1,7 @@
 name: build perl on windows
 
 on:
+  pull_request: {}
   push:
     branches:
     - 'releases/*'
@@ -9,24 +10,24 @@ jobs:
   windows:
     runs-on: windows-latest
     strategy:
+      fail-fast: false
       matrix:
         perl:
         - "5.30.1"
-        - "5.30.0"
+        # - "5.30.0"
         - "5.28.2"
-        - "5.28.1"
-        - "5.28.0"
+        # - "5.28.1"
+        # - "5.28.0"
         - "5.26.3"
-        - "5.26.2"
-        - "5.26.1"
-        - "5.26.0"
+        # - "5.26.2"
+        # - "5.26.1"
+        # - "5.26.0"
         - "5.24.4"
-        - "5.24.3"
-        - "5.24.2"
-        - "5.24.1"
-        - "5.24.0"
-        # builds fail with these versions, I gave up :(
-        # - "5.22.4"
+        # - "5.24.3"
+        # - "5.24.2"
+        # - "5.24.1"
+        # - "5.24.0"
+        - "5.22.4"
         # - "5.22.3"
         # - "5.22.2"
         # - "5.22.1"
@@ -64,24 +65,39 @@ jobs:
         # - "5.8.6"
         # - "5.8.5"
     steps:
-    - uses: actions/checkout@v1
-    - name: build
-      shell: pwsh
-      run: |
-        C:\Strawberry\perl\bin\perl.exe build-perl-win.pl
-      env:
-        PERL_VERSION: ${{ matrix.perl }}
+      - uses: actions/checkout@v1
+      - name: setup host perl
+        shell: bash
+        run: |
+          echo "::add-path::C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin"
+      - name: Host perl -V
+        run: perl -V
+      - name: gcc --version
+        run: gcc --version
 
-    - name: upload
-      shell: pwsh
-      run: |
-        Set-Location ${env:RUNNER_TEMP}
-        Invoke-WebRequest -Uri https://github.com/shogo82148/s3cli-mini/releases/download/v0.0.2/s3cli-mini_windows_amd64.zip -OutFile s3cli-mini.zip
-        7z x s3cli-mini.zip
-        $pkg = Get-Content "${env:GITHUB_WORKSPACE}/package.json" -Encoding UTF8 -Raw | ConvertFrom-Json
-        $version = $pkg.version
-        s3cli-mini_windows_amd64/s3cli-mini --region us-east-1 cp --acl public-read perl.zip "s3://shogo82148-actions-setup-perl/v$version/perl-${env:PERL_VERSION}-win32-x64.tar.gz"
-      env:
-        PERL_VERSION: ${{ matrix.perl }}
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - name: cpanm --installdeps .
+        shell: cmd
+        run: cpanm --installdeps .
+        working-directory: ./scripts
+
+      - name: build
+        shell: cmd
+        run: perl build-perl-win.pl
+        env:
+          PERL_VERSION: ${{ matrix.perl }}
+        working-directory: ./scripts
+
+      - name: upload
+        shell: pwsh
+        if: startsWith(github.ref, 'refs/heads/releases/')
+        run: |
+          Set-Location ${env:RUNNER_TEMP}
+          Invoke-WebRequest -Uri https://github.com/shogo82148/s3cli-mini/releases/download/v0.0.2/s3cli-mini_windows_amd64.zip -OutFile s3cli-mini.zip
+          7z x s3cli-mini.zip
+          $pkg = Get-Content "${env:GITHUB_WORKSPACE}/package.json" -Encoding UTF8 -Raw | ConvertFrom-Json
+          $version = $pkg.version
+          s3cli-mini_windows_amd64/s3cli-mini --region us-east-1 cp --acl public-read perl.zip "s3://shogo82148-actions-setup-perl/v$version/perl-${env:PERL_VERSION}-win32-x64.tar.gz"
+        env:
+          PERL_VERSION: ${{ matrix.perl }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
