--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,6 +1,7 @@
 name: build perl on linux
 
 on:
+  pull_request: {}
   push:
     branches:
     - 'releases/*'
@@ -62,21 +63,33 @@ jobs:
         - "5.8.6"
         - "5.8.5"
     steps:
-    - uses: actions/checkout@v1
-    - name: build
-      run: |
-        curl -sL https://raw.githubusercontent.com/tokuhirom/Perl-Build/master/perl-build > "$RUNNER_TEMP/perl-build"
-        perl "$RUNNER_TEMP/perl-build" "$PERL_VERSION" "$RUNNER_TOOL_CACHE/perl/$PERL_VERSION/x64" --noman
-        curl -L https://cpanmin.us | "$RUNNER_TOOL_CACHE/perl/$PERL_VERSION/x64/bin/perl" - --notest App::cpanminus Carton
-        cd "$RUNNER_TOOL_CACHE/perl/$PERL_VERSION/x64" && tar zcf "$RUNNER_TEMP/perl.tar.gz" .
-      env:
-        PERL_VERSION: ${{ matrix.perl }}
+      - uses: actions/checkout@v1
 
-    - name: upload
-      run: |
-        ACTIONS_VERSION=v$(cat "$GITHUB_WORKSPACE/package.json" | jq -r .version)
-        aws --region us-east-1 s3 cp --acl public-read "$RUNNER_TEMP/perl.tar.gz" "s3://shogo82148-actions-setup-perl/$ACTIONS_VERSION/perl-$PERL_VERSION-linux-x64.tar.gz"
-      env:
-        PERL_VERSION: ${{ matrix.perl }}
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - name: install Carton
+        shell: bash
+        run: cpanm Carton
+        working-directory: ./scripts/linux
+
+      - name: carton install
+        shell: bash
+        run: carton install
+        working-directory: ./scripts/linux
+
+      - name: build
+        run: |
+          curl -sL https://raw.githubusercontent.com/tokuhirom/Perl-Build/master/perl-build > "$RUNNER_TEMP/perl-build"
+          perl "$RUNNER_TEMP/perl-build" "$PERL_VERSION" "$RUNNER_TOOL_CACHE/perl/$PERL_VERSION/x64" --noman
+          curl -L https://cpanmin.us | "$RUNNER_TOOL_CACHE/perl/$PERL_VERSION/x64/bin/perl" - --notest App::cpanminus Carton
+          cd "$RUNNER_TOOL_CACHE/perl/$PERL_VERSION/x64" && tar zcf "$RUNNER_TEMP/perl.tar.gz" .
+        env:
+          PERL_VERSION: ${{ matrix.perl }}
+
+      - name: upload
+        if: startsWith(github.ref, 'refs/heads/releases/')
+        run: |
+          ACTIONS_VERSION=v$(cat "$GITHUB_WORKSPACE/package.json" | jq -r .version)
+          aws --region us-east-1 s3 cp --acl public-read "$RUNNER_TEMP/perl.tar.gz" "s3://shogo82148-actions-setup-perl/$ACTIONS_VERSION/perl-$PERL_VERSION-linux-x64.tar.gz"
+        env:
+          PERL_VERSION: ${{ matrix.perl }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
