--- a/.github/workflows/darwin.yml
+++ b/.github/workflows/darwin.yml
@@ -10,6 +10,7 @@ jobs:
   darwin:
     runs-on: macos-latest
     strategy:
+      fail-fast: false
       matrix:
         perl:
         - "5.30.1"
@@ -68,7 +69,7 @@ jobs:
 
       - name: install Carton
         shell: bash
-        run: cpanm Carton
+        run: curl -L https://cpanmin.us | perl - Carton
         working-directory: ./scripts/darwin
 
       - name: carton install
