--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,10 @@
 name: Main workflow
-on: [push, pull_request]
+on:
+  pull_request: {}
+  push:
+    branches-ignore:
+      - 'releases/*'
+
 jobs:
   test:
     runs-on: ${{ matrix.os }}
