--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,10 +1,13 @@
 name: build perl on windows
 
 on:
-  pull_request: {}
+  pull_request:
+    paths:
+      - 'scripts/windows/**'
+      - '.github/workflows/windows.yml'
   push:
     branches:
-    - 'releases/*'
+      - 'releases/*'
 
 jobs:
   windows:
