install to local directory

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -71,12 +71,12 @@ jobs:
 
       - name: install Carton
         shell: bash
-        run: curl -L https://cpanmin.us | perl - Carton
+        run: curl -L https://cpanmin.us | perl - -L local Carton
         working-directory: ./scripts/linux
 
       - name: carton install
         shell: bash
-        run: carton install
+        run: ./local/bin/carton install
         working-directory: ./scripts/linux
 
       - name: build
