--- a/.github/workflows/darwin.yml
+++ b/.github/workflows/darwin.yml
@@ -78,6 +78,8 @@ jobs:
       - name: carton install
         shell: bash
         run: ./local/bin/carton install
+        env:
+          PERL5LIB: ${{ github.workspace }}/scripts/windows/local/lib/perl5
         working-directory: ./scripts/darwin
 
       - name: build
