--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -86,6 +86,8 @@ jobs:
       - name: carton install
         shell: cmd
         run: "perl .\\local\\bin\\carton install"
+        env:
+          PERL5LIB: ${{ github.workspace }}/scripts/windows/local/lib/perl5
         working-directory: ./scripts/windows
 
       - name: build
