--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,10 +1,13 @@
 name: build perl on windows
 
 on:
-  pull_request: {}
+  pull_request:
+    paths:
+      - 'scripts/windows/**'
+      - '.github/workflows/windows.yml'
   push:
     branches:
-    - 'releases/*'
+      - 'releases/*'
 
 jobs:
   windows:
@@ -75,17 +78,25 @@ jobs:
       - name: gcc --version
         run: gcc --version
 
-      - name: cpanm --installdeps .
+      - name: install Carton
         shell: cmd
-        run: cpanm --installdeps .
-        working-directory: ./scripts
+        run: cpanm -L local Carton
+        working-directory: ./scripts/windows
+
+      - name: carton install
+        shell: cmd
+        run: "perl .\\local\\bin\\carton install"
+        env:
+          PERL5LIB: ${{ github.workspace }}/scripts/windows/local/lib/perl5
+        working-directory: ./scripts/windows
 
       - name: build
         shell: cmd
-        run: perl build-perl-win.pl
+        run: perl build.pl
         env:
           PERL_VERSION: ${{ matrix.perl }}
-        working-directory: ./scripts
+          PERL5LIB: ${{ github.workspace }}/scripts/windows/local/lib/perl5
+        working-directory: ./scripts/windows
 
       - name: upload
         shell: pwsh
