--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -12,7 +12,7 @@ jobs:
 
       - name: install Carton
         shell: bash
-        run: curl -sSL https://cpanmin.us | sudo perl - Carton
+        run: curl -sSL https://cpanmin.us | perl - --sudo Carton
         working-directory: ./scripts/linux
 
       - name: carton install
@@ -36,7 +36,7 @@ jobs:
       - name: install Carton
         shell: bash
         run: |
-          curl -sSL https://cpanmin.us | sudo perl - Carton
+          curl -sSL https://cpanmin.us | perl - --sudo Carton
         working-directory: ./scripts/darwin
 
       - name: carton install
